--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <link rel="stylesheet" href="styles.css">
-<title>Aarav's Homepage</home>
+<title>Aarav's Homepage</title>
 <BODY>
 <h1><center>Welcome to Aarav's Home!</center></h1>
 <hr size=3>
