--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <BODY>
 <h1><center>Welcome to Aarav's Home!</center></h1>
 <hr size=3>
-<p>Birds In Mayo: <a href="https://www.aaravmayo.github.io/birdsinmayo-m">Click Me!</a></p>
+<p>Birds In Mayo: <a href="https://aaravmayo.github.io/birdsinmayo-m">Click Me!</a></p>
 </BODY>
 </head>
 </HTML>
