--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
-<HTML>
-<HEAD>
-<link rel="stylesheet" href="styles.css">
-<title>Aarav's Homepage</title>
-<BODY>
-<h1><center>Welcome to Aarav's Home!</center></h1>
-<hr size=3>
-<p>Birds In Mayo: <a href="https://aaravmayo.github.io/birdsinmayo-m">Click Me!</a></p>
-</BODY>
+<html>
+<head>
+    <title>Aarav's Homepage</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-</HTML>
+<body>
+    <h1>Welcome to Aarav's Home!</h1>
+    <hr size="3">
+    <p>Birds In Mayo: <a href="https://aaravmayo.github.io/birdsinmayo-m">Click Me!</a></p>
+</body>
+</html>
